<resources>
    <string name="app_name">Bodies.tv</string>
    <string name="image_url">http://198.199.121.44/uploads/user/</string>
    <string name="facebook_app_id">1758492537736962</string>
    <string name="bodies">Bodies</string>
    <string name="ready_for_your_workout">Ready for your</string>
    <string name="around_you_now">Around You Now</string>
    <string name="choose_anb_activity_to_get_started">Choosean activity to get started!</string>
    <string name="yoga">Yoga</string>
    <string name="google_client_id">369035636108-ncbgcgdcqs8on7pothlqrl7eknu32bnd.apps.googleusercontent.com</string>
    <string name="pilates">Pilates</string>
    <string name="cycling">Cycling</string>
    <string name="zumba">Zumba</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="how">How</string>
    <string name="difficult">difficult</string>
    <string name="want">do you</string>
    <string name="do_you">do you</string>
    <string name="difficulty_head">want your workout session to be?</string>
    <string name="coaches">Coaches</string>
    <string name="beginner">Beginner</string>
    <string name="intermideate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later this Week</string>
    <string name="specific_date_time">Specific Date/Time</string>
    <string name="not_decided">Not Decided Yet</string>
    <string name="choose">Choose</string>
    <string name="when">when</string>
    <string name="want_to_start_text">want to start your workout?</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="most_popular">Most Popular</string>
    <string name="yoga_description">A Hindu spiritual and ascetic discipline consisting of breath control, simple meditation, and specific bodily postures, for general health and relaxation.</string>
    <string name="pilates_description">A system of exercises using special apparatus, designed to improve physical strenth, flexibility, and posture, and enhance mental awareness.</string>
    <string name="cycling_description">Great exercise that doesn\'t put any pressure on your knees while burning calories and toning up your leg muscles!</string>
    <string name="zumba_description">An aerobic fitness programme featuring movements inspired by various styles of Latin America dance.</string>
    <string name="all_activities">All Activities</string>
    <string name="find">Find</string>
    <string name="place">Place</string>
    <string name="to_work_out">to work out</string>
    <string name="want_more">Want More from your</string>
    <string name="want_more_2"> fitness regimen?</string>
    <string name="create_workout">Create Your Own Workout</string>
    <string name="workout">workout?</string>
    <string name="matching_coaches">Matching Coaches within</string>
    <string name="title_activity_coach_list_maps">Map</string>
    <string name="choose_upto_3">Choose up to three</string>
    <string name="activities">activities</string>
    <string name="for_your">for your</string>
    <string name="workout_session">workout session...</string>
    <string name="post_feedback">Post Feedback</string>
    <string name="create_your">Create Your</string>
    <string name="own_workout">Own Workout!</string>
    <string name="custom_head_text_1">Your Activities, Your Schedule, Your Pace!</string>
    <string name="custom_head_text_2">Complete freedom to choose when, where, how and with whom you want to work out.</string>
    <string name="custom_head_text_3">Your budget as well!</string>
    <string name="custom_head_text_4">Find hundreds of coaches and programs that fall within your budget range! Isn\'t that something?</string>
    <string name="lets_get_started">Let\'s Get Started!</string>
    <string name="book_appointment">Book an Appointment</string>
    <string name="languages">Languages</string>
    <string name="qualifications_affiliations"><![CDATA[Qualifications & Affiliations]]></string>
    <string name="awards_recognitions"><![CDATA[Awards & Recognition]]></string>
    <string name="find_coaches_description">Trainers can help you make the most of your fitness regimen. Choose from hundreds of top-rated trainers on Bodies!</string>
    <string name="place_to_workout_description">Uber-swanky health clubs to \'down to the basics\' gym, we\'ve got it all!</string>
    <string name="regimen_description">If you have very specific needs, tell Bodies what you would want from your workout and chances are, we\'ve got just what you want!</string>
    <string name="leave_your_feedback">Leave Your Feedback</string>
    <string name="title_activity_coach_details">CoachDetailsActivity</string>
    <string name="title_activity_coach_feedback">CoachFeedbackActivity</string>
    <string name="title_activity_leave_feedback_coach">LeaveFeedbackCoach</string>
    <string name="create_session_now">Create Session Now!</string>
    <string name="title_activity_select_difficulty">SelectDifficultyActivity</string>
    <string name="title_activity_time_selector">TimeSelectorActivity</string>
    <string name="login_head">Use any of your linked social accounts to sign in to your bodies.tv account!</string>
    <string name="already_member">Already a member?</string>
    <string name="login_now">Log in now</string>
    <string name="ready_for_your_workout_2">Ready for your Workout?</string>
    <string name="login_first_use_head">Enter your email address here to enable us to send a text message with an activation code on your phone to verify your account.</string>
    <string name="your_email_address">Your email address</string>
    <string name="request_verification_code">Request Verification Code</string>
    <string name="login_first_bottom_text">Use Facebook, Twitter or Google Login?</string>
    <string name="alternate_login_head1">Explore our specialized apps forTrainers, Space Owners, and Marketers</string>
    <string name="alternate_login_coach_head">Build your clientele as a fitness trainer or coach, and utilize your free time more productively.</string>
    <string name="alternate_login_host_head">Use your free space for fitness trainers and  users to work out in. Or, if you own a fitness center and would like to integrate with the Bodies platorm, this is the edition for you!</string>
    <string name="alternate_login_marketer_head">Designed for exceptional marketers who have a handle on the way the fitness industry works. You bring together fitness, trainers and spaces to create sessions that excite fitness seekers across the US.</string>
    <string name="alternate_login_marketer_head2">Interested? Contact Us nowfor more details and to get your personalised invite.</string>
    <string name="contact_us_now">Contact Us Now!</string>
    <string name="more_activities">+ 32 More activities ...</string>
    <string name="cant_find">Can\'t find what you\'re</string>
    <string name="looking_for">looking for?</string>
    <string name="title_activity_scrolling">Bodies</string>
    <string name="specific_date_time_">Specified Date/Time...</string>
</resources>