<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:background="@color/colorGreyBackground10"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_dashboard_inverted"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginRight="-1dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/trapezium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/find_coaches_layout"
                        fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find"
                        android:textColor="@color/colorTextRed"
                        android:textSize="18sp" />

                    <TextView
                        fontPath="fonts/System_San_Francisco_Display_Bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/find_coaches_layout"
                        android:text="@string/coaches"
                        android:textColor="@color/colorTextRed"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
                        android:tint="@color/black" />

                </RelativeLayout>

                <TextView
                    fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yoga_details_layout"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/find_coaches_description"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorViewBackground" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/find_coaches_layout1"
                        fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find"
                        android:textColor="@color/colorTextRed"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/place_text"
                        fontPath="fonts/System_San_Francisco_Display_Bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/find_coaches_layout1"
                        android:text="@string/place"
                        android:textColor="@color/colorTextRed"
                        android:textSize="18sp" />

                    <TextView
                        fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/place_text"
                        android:text="@string/to_work_out"
                        android:textColor="@color/colorTextRed"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
                        android:tint="@color/black" />

                </RelativeLayout>

                <TextView
                    fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yoga_details_layout"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/place_to_workout_description"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:background="@color/colorGreyBackground10"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/cant_find"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="180dp"
                android:text="@string/looking_for"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yoga_details_layout"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/regimen_description"
                android:textSize="15sp" />

            <Button
                android:id="@+id/create_own_workout_button"
                fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background_red"
                android:text="@string/create_workout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
