<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/difficulty_head"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/gradient_dashboard_diagonal"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/difficulty_text_first_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/when"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>

        <TextView
            fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/difficulty_text_first_half"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="-8dp"
            android:text="@string/want_to_start_text"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/coach_available_count"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="-20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/semi_circle_blue"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="34"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                fontPath="fonts/System_San_Francisco_Display_Thin.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/coaches"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/select_one_or_more_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_head"
        android:layout_marginLeft="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="15dp"
        android:text="Select one or more" />


    <RelativeLayout
        android:id="@+id/today_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_one_or_more_text"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/tick_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/checkmark_green" />

        <TextView
            fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tick_1"
            android:text="@string/today"
            android:textColor="@color/colorGrey"
            android:textSize="16dp" />

    </RelativeLayout>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/today_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGreyBackground15" />

    <RelativeLayout
        android:id="@+id/tomorrow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_1"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/tick_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/check_mark_greyed" />

        <TextView
            fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tick_2"
            android:text="@string/tomorrow"
            android:textColor="@color/colorGrey"
            android:textSize="16dp" />

    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tomorrow_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGreyBackground15" />


    <RelativeLayout
        android:id="@+id/later_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/tick_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/check_mark_greyed" />

        <TextView
            fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tick_3"
            android:text="@string/later"
            android:textColor="@color/colorGrey"
            android:textSize="16dp" />

    </RelativeLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/later_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGreyBackground15" />


    <RelativeLayout
        android:id="@+id/specific_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/tick_4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/check_mark_greyed" />

        <TextView
            fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tick_4"
            android:text="@string/specific_date_time_"
            android:textColor="@color/colorGrey"
            android:textSize="16dp" />

    </RelativeLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/specific_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGreyBackground15" />


    <RelativeLayout
        android:id="@+id/not_decided_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/tick_5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/check_mark_greyed" />

        <TextView
            fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tick_5"
            android:text="@string/not_decided"
            android:textColor="@color/colorGrey"
            android:textSize="16dp" />

    </RelativeLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/not_decided_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGreyBackground15" />


    <TextView
        android:id="@+id/next_button"
        fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorButtonPink"
        android:clickable="true"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20dp" />


    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:background="@color/white"-->
    <!--android:paddingBottom="10dp"-->
    <!--android:paddingTop="10dp">-->

    <!--<Button-->
    <!--android:id="@+id/next_button"-->
    <!--fontPath="fonts/Titillium_Regular.otf"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="60dp"-->
    <!--android:layout_marginLeft="15dp"-->
    <!--android:layout_marginRight="15dp"-->
    <!--android:background="@drawable/button_background_red"-->
    <!--android:text="@string/next"-->
    <!--android:textAllCaps="false"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="20sp" />-->


    <!--</RelativeLayout>-->

    <include layout="@layout/toolbar" />

</RelativeLayout>